[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Images/Composition/NucleoBandeirante/1- Núcleo bandeirante.jpg" type="Texture" id=1]
[ext_resource path="res://assets/Images/Composition/NucleoBandeirante/no_cenário.png" type="Texture" id=2]
[ext_resource path="res://assets/Images/Composition/NucleoBandeirante/no_cenário (1).png" type="Texture" id=3]
[ext_resource path="res://scenes/AuxScenes/AudioController.tscn" type="PackedScene" id=4]
[ext_resource path="res://soundtrack/Loop4 Lavadeiras.mp3" type="AudioStream" id=5]
[ext_resource path="res://scenes/ambience/Lavadeiras.gd" type="Script" id=6]
[ext_resource path="res://scenes/AuxScenes/PlayerBackPack.tscn" type="PackedScene" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Lavadeiras" type="CanvasLayer"]
script = ExtResource( 6 )

[node name="MainMusic" parent="." instance=ExtResource( 4 )]
stream = ExtResource( 5 )

[node name="scenario" type="Sprite" parent="."]
position = Vector2( 512.235, 288 )
texture = ExtResource( 1 )

[node name="PlayerBackPack" parent="." instance=ExtResource( 7 )]

[node name="DistratoraBox" type="Button" parent="."]
margin_left = 437.0
margin_top = 215.0
margin_right = 572.0
margin_bottom = 528.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 1 )
custom_styles/disabled = SubResource( 1 )
custom_styles/normal = SubResource( 1 )

[node name="Distratora" type="Sprite" parent="DistratoraBox"]
position = Vector2( 69, 156 )
scale = Vector2( 0.535316, 0.535316 )
texture = ExtResource( 3 )

[node name="SuzanaBox" type="Button" parent="."]
margin_left = 854.0
margin_top = 214.0
margin_right = 982.0
margin_bottom = 574.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 2 )
custom_styles/disabled = SubResource( 2 )
custom_styles/normal = SubResource( 2 )

[node name="Suzana" type="Sprite" parent="SuzanaBox"]
position = Vector2( 65, 190 )
scale = Vector2( 0.729014, 0.729014 )
texture = ExtResource( 2 )

[connection signal="finished" from="MainMusic" to="." method="replay_audio"]
[connection signal="pressed" from="DistratoraBox" to="." method="distratora_dialog"]
[connection signal="pressed" from="SuzanaBox" to="." method="suzana_dialog"]
